# currency_project

./: README.md  pyproject.toml
config/: settings.py  urls.py
currency/: models.py  utils.py  views.py
currency/migrations/: 0001_initial.py
